# esc_decode

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.single-stage  README.md  lxc-profile.yaml  pyproject.toml  setup-lxc.sh
esc_decode/: __main__.py  esc_decode.py  process.py  reg_desc.py
tests/: test_decode.py
tests/data/: decoder--250531-232808.csv
