[project]
name = "esc-decode"
version = "0.1.0"
description = ""
authors = [{ name = "insleker", email = "bkinnightskytw@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = { text = "MPL-2.0" }
dependencies = [
    "expression[pydantic] (>=5.6.0,<6.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "termcolor (>=3.1.0,<4.0.0)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.12,<0.12",
    "pytest>=8.3.5,<9",
    "nuitka>=2.7.11",
]

[tool.ruff]
exclude = ["**/migrations/", "**/manage.py"]
line-length = 100

[tool.ruff.lint]
ignore = [
    "E402", # module level import not at top of file
]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]

[tool.ruff.format]
docstring-code-line-length = 100
quote-style = "double"           # 引號風格，雙引號是預設值，這裡只是明示這個設定
